// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radio-button-wrapper accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = error 1`] = `
Object {
  "checked": false,
  "invalid": "true",
  "name": "Some label. Some error message.",
  "role": "radio",
}
`;

exports[`radio-button-wrapper accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = none 1`] = `
Object {
  "checked": false,
  "name": "Some label",
  "role": "radio",
}
`;

exports[`radio-button-wrapper accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = success 1`] = `
Object {
  "checked": false,
  "name": "Some label. Some success message.",
  "role": "radio",
}
`;

exports[`radio-button-wrapper accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = error 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "role": "none",
                        },
                        Object {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
            Object {
              "name": "Some error message.",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`radio-button-wrapper accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = success 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
            Object {
              "name": "Some success message.",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "status",
}
`;

exports[`radio-button-wrapper accessibility should expose correct accessibility tree properties in error state: Of Input 1`] = `
Object {
  "checked": false,
  "invalid": "true",
  "name": "Some label. Some error message.",
  "role": "radio",
}
`;

exports[`radio-button-wrapper accessibility should expose correct accessibility tree properties in error state: Of Message 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "role": "none",
                        },
                        Object {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
            Object {
              "name": "Some error message.",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`radio-button-wrapper accessibility should expose correct initial accessibility tree 1`] = `
Object {
  "checked": false,
  "name": "Some label",
  "role": "radio",
}
`;
